# bk-lite

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG-WEB-COMPONENT-GOVERNANCE.md  CLAUDE.md  CONTEXT.md  DESIGN.md  DEVELOP.md  FRONTEND.md  Makefile  PLANS.md  PRODUCT.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  Readme.md  SECURITY.md  SSH_KEY_AUTH_IMPLEMENTATION.md  k8s-config-check-prompt.txt  k8s-config-check-test-flow.md  k8s-workload-config-check-interaction-design.md  k8s-workload-config-check-report.md  readme_en.md
.claude/: CLAUDE.md  launch.json  settings.json  settings.local.json
.codex/: config.toml
.husky/: pre-commit
.projectmem/: PROJECT_MAP.md  config.toml  summary.md
HKAA_test/: test_oceanstor_onsite.py
agents/container-manager/: main.py  pyproject.toml
algorithms/: AGENTS.md  DESIGN_GUIDE.md
docs/: backend-coding-guide.md  cmdb-e2e-author-guide.md  operations.md  project-service-dependency.drawio
docs-website/: Dockerfile  docusaurus.config.js
metis/: pyproject.toml  server.py
mobile/: .dockerignore  DESIGN.md  Dockerfile.h5  README.md  next.config.ts  nginx.h5.conf  package.json  pnpm-lock.yaml
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/android/app/src/main/java/org/bklite/mobile/: MainActivity.kt
mobile/src-tauri/capabilities/: default.json
mobile/src-tauri/icons/: icon.icns
mobile/src-tauri/src/: api_proxy.rs  lib.rs  permissions.rs
neco/: Version.md  pyproject.toml
scripts/: agent-tooling-bootstrap  codegraph-mcp  projectmem-mcp
server/: .coverage.JustindeMacBook-Pro_local.pid5425.Xp5HUaux.HNQIp837rWOh  .gitignore  .pre-commit-config.yaml  Makefile  asgi.py  pyproject.toml  pytest.ini  test_chatflow_fix.md  urls.py  告警聚合任务执行流程文档.md  (+1 more)
support-files/lang-syncer/: Makefile  README.md  main.py  notion_client.py  notion_helper.py  pyproject.toml  server_syncer.py  utils.py  web_syncer.py
(+11684 files in other folders)
