[project]
name = "container-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker==7.1.0",
    "fire>=0.7.1",
    "kubernetes==29.0.0",
    "nanoid==2.0.0",
    "nats-py==2.10.0",
    "python-dotenv>=1.2.1",
]
