[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
futures-util = "0.3"
url = "2"

[target.'cfg(target_os = "ios")'.dependencies]
# WKWebView 默认的 automatic content inset 会与 CSS safe-area 重复避让。
tauri-plugin-ios-webview-insets = "=0.1.0"
# iOS 容器通过 Objective-C runtime 启用 WKWebView 原生边缘返回/前进手势。
objc2 = "=0.6.3"
